Add Transaction methods handling: Select, Commit, Rollback